# koi3

./: .gitignore  Cargo.toml  LICENSE-MIT.md  LICENSE-ZLIB.md  README.md
assets/: custom_shader.glsl  skybox_sh.glsl  venice_sunset_small.hdr
crates/koi_animation/: Cargo.toml
crates/koi_animation/src/: lib.rs
crates/koi_assets/: Cargo.toml
crates/koi_assets/src/: lib.rs  loader.rs  slotmap.rs
crates/koi_audio/: Cargo.toml
crates/koi_audio/src/: audio_listener.rs  audio_source.rs  lib.rs  low_pass_filter.rs  sound.rs  sound_assets.rs
crates/koi_camera_controls/: Cargo.toml
crates/koi_camera_controls/src/: lib.rs
crates/koi_ecs/: Cargo.toml
crates/koi_ecs/koi_ecs_derive/: Cargo.toml
crates/koi_ecs/koi_ecs_derive/koi_ecs_derive_impl/: Cargo.toml
crates/koi_ecs/koi_ecs_derive/koi_ecs_derive_impl/src/: lib.rs
crates/koi_ecs/koi_ecs_derive/src/: lib.rs
crates/koi_ecs/src/: hierarchy.rs  lib.rs  world_cloner.rs
crates/koi_events/: Cargo.toml
crates/koi_events/src/: lib.rs
crates/koi_fetch/: Cargo.toml
crates/koi_fetch/src/: lib.rs
crates/koi_graphics_context/: Cargo.toml
crates/koi_graphics_context/examples/: hello.rs
crates/koi_graphics_context/src/: assets.rs  backend_trait.rs  bump_allocator.rs  command_buffer.rs  gl_backend.rs  gl_shared.rs  graphics_context.rs  kmath_impls.rs  lib.rs  webgl_backend.js  webgl_backend.rs  webgpu_backend.js  webgpu_backend.rs
crates/koi_hierarchy/: Cargo.toml
crates/koi_hierarchy/src/: lib.rs
crates/koi_input/: Cargo.toml
crates/koi_input/src/: lib.rs
crates/koi_networking/: Cargo.toml
crates/koi_networking/src/: lib.rs  reliable_ordered_stream.rs  reliable_unordered_stream.rs  room.rs  socket_trait.rs  udp.rs  webrtc_native.rs
crates/koi_prefabs/: Cargo.toml
crates/koi_prefabs/src/: gltf.rs  lib.rs
crates/koi_random/: Cargo.toml
crates/koi_random/src/: lib.rs
crates/koi_renderer/: Cargo.toml
crates/koi_renderer/src/: camera.rs  cube_map.rs  koi_integration.rs  lib.rs  light.rs  light_probe.rs  material.rs  material_constants.rs  mesh.rs  mesh_constants.rs  morphable_mesh.rs  renderer.rs  shader.rs  shader_constants.rs  shader_parser.rs  specular_precompute.rs  spherical_harmonics.rs  texture.rs  texture_constants.rs
crates/koi_renderer/src/shaders_glsl/: equirectangular_to_cubemap.glsl  physically_based.glsl  physically_based_with_morph.glsl  skybox.glsl  test.glsl  unlit.glsl  unlit_ui.glsl
crates/koi_renderer/src/shaders_glsl/snippets/: scene_info.glsl  standard_vertex.glsl
crates/koi_resources/: Cargo.toml
crates/koi_resources/src/: lib.rs
crates/koi_slotmap/: Cargo.toml
crates/koi_slotmap/src/: lib.rs
crates/koi_time/: Cargo.toml
crates/koi_time/src/: lib.rs
crates/koi_transform/: Cargo.toml
crates/koi_transform/src/: lib.rs  transform_plugin.rs
crates/koi_ui/: Cargo.toml
crates/koi_ui/src/: lib.rs
examples/: animation.rs  closure_state.rs  cube_map.rs  custom_shader.rs  hello.rs  keyboard_input.rs  morph_mesh_animation.rs  random.rs  readme.md  sound.rs  texture.rs
examples/assets/: custom_shader.glsl
examples/wasm/: web_build.sh  web_run.sh
examples/wasm/assets/: custom_shader.glsl
examples/web/: kwasm.js  web_build.sh
src/: app.rs  lib.rs
