[package]
name = "koi3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["kapp", "koi_renderer", "koi_transform", "koi_audio"]
window = []

[dependencies]
kapp = {path = "../koi2/crates/kapp", default-features=false, features=["kserde"], optional = true}
kapp_platform_common = {path = "../koi2/crates/kapp/kapp_platform_common"}
kinstant = {path = "../koi2/crates/kinstant"}
koi_hierarchy = {path = "crates/koi_hierarchy"}
koi_ecs = {path = "crates/koi_ecs"}
koi_resources = {path = "crates/koi_resources"}
koi_events = {path = "crates/koi_events"}

koi_renderer =  {path = "crates/koi_renderer", optional = true}
koi_transform = {path = "crates/koi_transform", optional = true}
koi_audio = {path = "crates/koi_audio", optional = true}


[profile.release]
strip = true
panic = "abort"


