[package]
name = "koi3"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[features]
default = ["core", "koi_camera_controls"]
core = ["kapp", "koi_renderer", "koi_transform", "koi_audio", "koi_input", "koi_random"]
window = []

[dependencies]
kapp = {path = "../koi2/crates/kapp", default-features=false, optional = true}
kapp_platform_common = {path = "../koi2/crates/kapp/kapp_platform_common"}
kinstant = {path = "../koi2/crates/kinstant"}
kmath = {path = "../koi2/crates/kmath"}
koi_hierarchy = {path = "crates/koi_hierarchy"}
koi_ecs = {path = "crates/koi_ecs"}
koi_resources = {path = "crates/koi_resources"}
koi_events = {path = "crates/koi_events"}
koi_time = {path = "crates/koi_time"}

koi_renderer =  {path = "crates/koi_renderer", optional = true}
koi_transform = {path = "crates/koi_transform", optional = true}
koi_audio = {path = "crates/koi_audio", optional = true}
koi_input = {path = "crates/koi_input", optional = true}
koi_random = {path = "crates/koi_random", optional = true}

koi_camera_controls = {path = "crates/koi_camera_controls", optional = true}

[profile.release]
strip = true
panic = "abort"
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1





