[package]
name = "koi_fetch"
version = "0.1.0"
edition = "2021"

[features]
network_requests = ["ureq"]

[dependencies]

[target.'cfg(target_arch="wasm32")'.dependencies]
kwasm = {path = "../../../koi2/crates/kwasm"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = {version = "2.5.0", optional = true}
