[package]
name = "koi_graphics_context"
version = "0.1.0"
edition = "2021"

[features] 
default = ["gl", "webgl"]
gl = ["kapp/gl_context"]
webgpu = ["naga"]
webgl = []

[dependencies]
half = {version = "2.1.0", default-features = false}

kapp = {path = "../../../koi2/crates/kapp", default-features=false}
kcolor = {path = "../../../koi2/crates/kcolor", default-features=false}
kmath = {path = "../../../koi2/crates/kmath", default-features=false}
ktasks = {path = "../../../koi2/crates/ktasks"}
klog = {path = "../../../koi2/crates/klog"}
naga = {version = "0.9.0", optional = true, features=["glsl-in", "wgsl-out"]}

[target.'cfg(target_arch="wasm32")'.dependencies]
kwasm = {path = "../../../koi2/crates/kwasm"}