[package]
name = "koi_random"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oorandom = "11.1.3"
kmath = {path = "../../../koi2/crates/kmath"}
kcolor = {path = "../../../koi2/crates/kcolor"}

[target.'cfg(target_arch="wasm32")'.dependencies]
kwasm = {path = "../../../koi2/crates/kwasm"}
