[package]
name = "koi_renderer"
version = "0.1.0"
edition = "2021"

[features]
default = ["png", "jpeg", "hdri"]
png = ["imagine", "bytemuck"]
jpeg = ["jpeg-decoder"]
hdri = ["hdrldr"]

[dependencies]
koi_graphics_context = {path = "../koi_graphics_context"}

half = {version = "2.1.0", no-default-features = true}

kcolor = {path = "../../../koi2/crates/kcolor", default-features=false}
kmath = {path = "../../../koi2/crates/kmath"}

klog = {path = "../../../koi2/crates/klog"}

koi_ecs = {path = "../koi_ecs"}
koi_transform = {path = "../koi_transform"}
koi_assets = {path = "../koi_assets"}
koi_resources = {path = "../koi_resources"}
koi_events = {path = "../koi_events"}
koi_fetch = {path = "../koi_fetch"}
kapp = {path = "../../../koi2/crates/kapp", default-features=false}

imagine = {git="https://github.com/Lokathor/imagine", optional = true, features = ["png", "miniz_oxide"]}
bytemuck = {version = "1.7.3", features = ["extern_crate_alloc"], optional = true}
jpeg-decoder = {version = "0.1.20", default-features = false, optional = true}
hdrldr = {version = "0.1.2", optional = true}

[target.'cfg(target_arch="wasm32")'.dependencies]
kwasm = {path = "../../../koi2/crates/kwasm"}
