[package]
name = "koi_transform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kmath = {path = "../../../koi2/crates/kmath"}
koi_ecs = {path = "../koi_ecs"}
koi_resources = {path = "../koi_resources"}
koi_events = {path = "../koi_events"}
