[package]
name = "koi_ecs_derive"
version = "0.1.0"
authors = ["Ian Kettlewell <ian.kettlewell@gmail.com>"]
edition = "2021"

[dependencies]
kserde_derive_impl = {path = "../../../../koi2/crates/kserde/kserde_derive_impl"}
koi_ecs_derive_impl = {path = "koi_ecs_derive_impl"}
kreflect_common = {path = "../../../../koi2/crates/kreflect/kreflect_common", features = ["proc_macro"]}

[lib]
proc-macro = true